fix(popover): remove text align center

--- a/packages/popover/src/popover.pcss
+++ b/packages/popover/src/popover.pcss
@@ -5,6 +5,7 @@
   cursor: pointer;
   display: inline-flex;
   padding: unset;
+  text-align: unset;
   text-decoration: underline dotted;
   text-underline-position: under;
 
